objects/BMCServiceDesk__BMC_Software__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__BuildNumber__c</fullName>
        <label>Build Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildType__c</fullName>
        <label>Build Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationBasicNumber__c</fullName>
        <label>Configuration Basic Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractID__c</fullName>
        <label>Contract ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstallLocation__c</fullName>
        <label>Install Location</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicenseType__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
        <label>Licenses Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PatchNumber__c</fullName>
        <label>Patch Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServicePack__c</fullName>
        <label>Service Pack</label>
        <length>254</length>
        <type>Text</type>
    </fields>
</CustomObject>